Updated Subcategory Items

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Welcome Shopping Cart</title>
+    <link rel="stylesheet" href="main.css" type="text/css" media="screen" />
 </head>
 <body>
     <div class="container">
@@ -11,6 +12,9 @@
             <ul>
                 <li>
                     <a href="#">Electronics</a>
+                   
+                </li>
+                <li><a href="#">Appliances</a>
                     <ul>
                         <li><a href="#">Washing Machines</a></li>
                         <li>
@@ -30,7 +34,6 @@
 
                     </ul>
                 </li>
-                <li><a href="#">Appliances</a></li>
                 <li><a href="#">Baby & Kids</a></li>
                 <li><a href="#">Home & Furniture</a></li>
                 <li><a href="#">Books</a></li>
